--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,20 @@
 language: node_js
 node_js:
   - lts/*
+
+sudo: true
+
+addons:
+  chrome: stable
+
+branches:
+  only:
+    - master
+
+before_script:
+  - npm install -g @angular/cli
+
+script:
+  - ng lint
+  - ng test -watch false -browsers ChromeHeadless
+  - ng e2e
